# lightweightvk

./: .clang-tidy  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  deploy_content.py  deploy_content_android.py  deploy_deps.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: c-cpp.yml
android/: build.gradle  settings.gradle.in
android/app/: AndroidManifest.xml.in  MainActivity.java.in  build.gradle.in
android/gradle/wrapper/: gradle-wrapper.properties
android/lvklib/: build.gradle
android/lvklib/src/main/: AndroidManifest.xml
android/lvklib/src/main/java/org/lvk/samples/: LvkActivity.java  LvkLauncherActivity.java
android/lvklib/src/main/res/values/: styles.xml
android/lvklib/src/main/res/xml/: data_extraction_rules.xml
cmake/: CommonMacros.txt
lvk/: CMakeLists.txt  HelpersImGui.cpp  HelpersImGui.h  LVK.cpp  LVK.h  LVK.mm  Pool.h  Result.h
lvk/shader/: CMakeLists.txt  ShaderCompile.cpp  ShaderCompile.h
lvk/vulkan/: CMakeLists.txt  ShaderCompile.cpp  ShaderCompile.h  VulkanClasses.cpp  VulkanClasses.h  VulkanUtils.cpp  VulkanUtils.h  XrUtils.cpp  XrUtils.h
samples/: 001_HelloTriangle.cpp  001_HelloTriangle_Slang.cpp  002_RenderToCubeMap.cpp  003_RenderToCubeMapSinglePass.cpp  004_YUV.cpp  005_MeshShaders.cpp  006_RayTracingHello.cpp  006_SwapchainHDR.cpp  007_DynamicRenderingLocalRead.cpp  007_RayTracingAO.cpp  008_MeshShaderFireworks.cpp  009_TriplanarMapping.cpp  009_TriplanarMapping_Slang.cpp  010_OmniShadows.cpp  Bistro.h  CMakeLists.txt  DEMO_001_SolarSystem.cpp  DEMO_002_Bistro.cpp  GAME_TerrainRunner.cpp  README.md  RTX_001_Hello.cpp  RTX_002_AO.cpp  RTX_003_Pipeline.cpp  RTX_004_Textures.cpp  Tiny.cpp  Tiny_Mesh.cpp  Tiny_MeshLarge.cpp  VulkanApp.cpp  VulkanApp.h
src/igl/vulkan/: CMakeLists.txt  Device.cpp  VulkanContext.cpp
